--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -5,6 +5,9 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <variable
+            name="itemPosition"
+            type="int" />
 
         <variable
             name="product"
@@ -117,6 +120,7 @@
                                 android:layout_weight="25"
                                 android:background="@drawable/border_btn_bg"
                                 android:gravity="center"
+                                android:onClick="@{()->groceryInterface.removeItem(product,itemPosition)}"
                                 android:text="-"
                                 android:textColor="@color/primarycolor" />
 
@@ -136,8 +140,8 @@
                                 android:background="@drawable/colored_btn_bg"
                                 android:gravity="center"
                                 android:text="+"
+                                android:onClick="@{()->groceryInterface.addItem(product,itemPosition)}"
                                 android:textColor="@color/white" />
-<!--                            android:onClick="@{()->groceryInterface.addItem(product)}"-->
                         </LinearLayout>
 
                         <LinearLayout
